# w4-vit-clip-transformer-merge

./: .gitignore  README.md  pyproject.toml
data/: README.md
src/: clip_to_qwen.py  dataloader.py  models.py  qwen_decoder.py  train_decoder.py  train_projector.py
src/Andrew/: models.py  train_decoder.py  utils.py
src/base_models/: clip_encoder.py  clip_to_qwen.py
src/checkpoints/: epoch47_step0.pt  epoch47_step10.pt  epoch47_step20.pt  epoch47_step30.pt  epoch47_step40.pt  epoch47_step50.pt  epoch47_step60.pt  epoch47_step70.pt  latest.pt
