[project]
name = "w4-vit-clip-transformer-merge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datasets>=3.1.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
    "wandb>=0.20.1",
]
